# dbd

./: .editorconfig  .gitignore  LICENSE  LICENSES  README.md  pyproject.toml  requirements.txt  setup.py
dbd/: __init__.py
dbd/cli/: dbdcli.py
dbd/config/: dbd_profile.py  dbd_project.py
dbd/db/: db_column.py  db_schema.py  db_table.py
dbd/executors/: model_executor.py
dbd/generator/: jinja_generator_env.py
dbd/generator/generator_templates/: column.j2  macros.j2  schema.j2  table.j2
dbd/log/: dbd_exception.py  dbd_logger.py
dbd/resources/template/: .dbd.profile  dbd.profile  dbd.project
dbd/tasks/: data_task.py  db_table_task.py  ddl_task.py  elt_task.py  task.py
dbd/utils/: io_utils.py  jinja_utils.py  profiling_utils.py  sql_parser.py  text_utils.py
examples/: .dbd.profile  README.md
examples/basic/: dbd.project
examples/basic/model/: population.yaml
examples/bigquery/: README.md  dbd.profile
examples/bigquery/basic/: dbd.profile  dbd.project
examples/bigquery/covid/: README.md  dbd.profile
examples/bigquery/covid_cz/: README.md  dbd.project
examples/covid_cz/: dbd.project
examples/covid_cz/model/: prolog.ddl
examples/data_formats/model/: population.xlsx  state.yaml
examples/mysql/: README.md  dbd.profile
examples/mysql/basic/: README.md  dbd.project
examples/mysql/covid/: README.md  dbd.project
examples/mysql/covid_cz/: README.md  dbd.profile  dbd.project
examples/postgres/: README.md  dbd.profile
examples/postgres/basic/: README.md  dbd.project
examples/postgres/covid/: dbd.profile  dbd.project
examples/postgres/covid_cz/: README.md  dbd.project
examples/redshift/: README.md  dbd.profile
examples/redshift/basic/: README.md  dbd.project
examples/redshift/covid/: README.md  dbd.profile  dbd.project
examples/snowflake/: README.md  dbd.profile
examples/sqlite/: README.md  dbd.profile
tests/: test_capabilities.py  test_data.py  test_dbd.py  test_errors.py  test_examples.py  test_examples_basic.py  test_examples_covid.py  test_examples_covid_cz.py  test_examples_etl.py  test_examples_olympics.py  test_misc.py  test_model.py  test_performance.py  test_profile.py  test_project.py  test_sql_parser.py  test_validator.py
tests/fixtures/: .dbd.profile  dbd.profile
(+267 files in other folders)
